Fixed layout bug of my photo on about page

--- a/themes/gameful/static/css/style.css
+++ b/themes/gameful/static/css/style.css
@@ -287,7 +287,7 @@ ul {
 
 .static img {
     filter: grayscale(100%) contrast(120%);
-    max-width: 20rem;
+    width: 20rem;
     border-radius: 1rem;
 }
 
